changes to docker file